; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bootloader_support/src/extr_bootloader_flash.c_bootloader_mmap.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bootloader_support/src/extr_bootloader_flash.c_bootloader_mmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@map = common dso_local global i64 0, align 8
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"tried to bootloader_mmap twice\00", align 1
@SPI_FLASH_MMU_PAGE_SIZE = common dso_local global i32 0, align 4
@SPI_FLASH_MMAP_DATA = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [28 x i8] c"spi_flash_mmap failed: 0x%x\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @bootloader_mmap(i32 %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %9 = load i64, i64* @map, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i32, i32* @TAG, align 4
  %13 = call i32 (i32, i8*, ...) @ESP_LOGE(i32 %12, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  store i8* null, i8** %3, align 8
  br label %45

14:                                               ; preds = %2
  store i8* null, i8** %6, align 8
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* @SPI_FLASH_MMU_PAGE_SIZE, align 4
  %17 = sub nsw i32 %16, 1
  %18 = xor i32 %17, -1
  %19 = and i32 %15, %18
  store i32 %19, i32* %7, align 4
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* %7, align 4
  %22 = sub nsw i32 %20, %21
  %23 = load i32, i32* %5, align 4
  %24 = add nsw i32 %23, %22
  store i32 %24, i32* %5, align 4
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* %5, align 4
  %27 = load i32, i32* @SPI_FLASH_MMAP_DATA, align 4
  %28 = call i64 @spi_flash_mmap(i32 %25, i32 %26, i32 %27, i8** %6, i64* @map)
  store i64 %28, i64* %8, align 8
  %29 = load i64, i64* %8, align 8
  %30 = load i64, i64* @ESP_OK, align 8
  %31 = icmp ne i64 %29, %30
  br i1 %31, label %32, label %36

32:                                               ; preds = %14
  %33 = load i32, i32* @TAG, align 4
  %34 = load i64, i64* %8, align 8
  %35 = call i32 (i32, i8*, ...) @ESP_LOGE(i32 %33, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i64 %34)
  store i8* null, i8** %3, align 8
  br label %45

36:                                               ; preds = %14
  %37 = load i8*, i8** %6, align 8
  %38 = ptrtoint i8* %37 to i64
  %39 = load i32, i32* %4, align 4
  %40 = load i32, i32* %7, align 4
  %41 = sub nsw i32 %39, %40
  %42 = sext i32 %41 to i64
  %43 = add nsw i64 %38, %42
  %44 = inttoptr i64 %43 to i8*
  store i8* %44, i8** %3, align 8
  br label %45

45:                                               ; preds = %36, %32, %11
  %46 = load i8*, i8** %3, align 8
  ret i8* %46
}

declare dso_local i32 @ESP_LOGE(i32, i8*, ...) #1

declare dso_local i64 @spi_flash_mmap(i32, i32, i32, i8**, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
